@@ -28,6 +28,7 @@ Broker:
 - Fix MQTT v5 overlapping subscription behaviour. Clients now receive message
   from all matching subscriptions rather than the first one encountered, which
   ensures the maximum QoS requirement is met.
+- Fix incoming/outgoing quota problems for QoS>0.
 
 Client library:
 - Fix typo causing build error on Windows when building without TLS support.
